build/apps/traefik/overlays/infra/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: basicauth
    removeHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  #namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth
    removeHeader: true

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers
  namespace: traefik
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: rate-limit
    namespace: traefik
spec:
  rateLimit:
    average: 100
    burst: 50
---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: redirect-to-https
#   namespace: traefik
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whitelist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
    - "10.0.0.0/8"
    - "172.16.0.0/16"
    - "172.0.0.0/16"
    - "127.0.0.1/32"
    - 173.245.48.0/20
    - 103.21.244.0/22
    - 103.22.200.0/22
    - 103.31.4.0/22
    - 141.101.64.0/18
    - 108.162.192.0/18
    - 190.93.240.0/20
    - 188.114.96.0/20
    - 197.234.240.0/22
    - 198.41.128.0/17
    - 162.158.0.0/15
    - 104.16.0.0/12
    - 172.64.0.0/13
    - 131.0.72.0/22
    - 2400:cb00::/32
    - 2606:4700::/32
    - 2803:f800::/32
    - 2405:b500::/32
    - 2405:8100::/32
    - 2a06:98c0::/29
    - "2c0f:f248::/32"
    - "fc00::/7"

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-whitelist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
    - 127.0.0.1/32
    - 172.10.0.0/16
    - 172.0.0.0/16
    - 192.168.1.0/24

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security
spec:
  headers:
    frameDeny: true               # the page can not be loaded in an iframe, Set frameDeny to true to add the X-Frame-Options header with the value of DENY.
    sslRedirect: true             # The sslRedirect only allow HTTPS requests when set to true.
    browserXssFilter: true        # Limit XSS, Set browserXssFilter to true to add the X-XSS-Protection header with the value 1; mode=block.
    contentTypeNosniff: true      # Do not detect Mime type by browser, Set contentTypeNosniff to true to add the X-Content-Type-Options header with the value nosniff.
    # HSTS HTTP Strict Transport Security
    stsIncludeSubdomains: true    # If the stsIncludeSubdomains is set to true, the includeSubDomains directive is appended to the Strict-Transport-Security header. all subdomains have to HSTS complained
    stsPreload: true              # https://hstspreload.org/
    stsSeconds: 31536000          #  To be able to use HSTS Preloading, this parameter must be at least 31536000 second
