build/apps/traefik/overlays/infra/ingressroute-traefik-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    # gethomepage.dev/description: traefik test tool
    # gethomepage.dev/enabled: "true"
    # gethomepage.dev/group: Tools
    # gethomepage.dev/icon: homepage.png
    # gethomepage.dev/name: traefik
    # gethomepage.dev/widget.type: "traefik"
    # gethomepage.dev/widget.url: "https://traefik.anotherlife.pl"

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.anotherlife.pl`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      # middlewares:
      #   - name: traefik-dashboard-auth  #chain-traefik-dashboard
      #     namespace: traefik
  tls:
    #secretName: route53-certificate-anotherlife-pl-tls-staging # -staging / -production
    store:
      name: tlsstore-route53-anotherlife-pl-tls-staging
    # options:
    #   name: tlsoptions
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
